# chip8

./: .gitignore  CMakeLists.txt  Doxyfile  ITENS.md  README.md  itens.md
.devcontainer/: Dockerfile  devcontainer.json
app/: main.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  all.cmake
include/chip8/: cpu.h  emulator.h  keyboard.h  memory.h  registers.h  screen.h  stack.h  timer.h
include/exemplo/: exemplo.h
include/gui/: sfml.h
source/: CMakeLists.txt  exemplo.cpp
source/chip8/: cpu.cpp  emulator.cpp  keyboard.cpp  memory.cpp  registers.cpp  screen.cpp  stack.cpp  timer.cpp
source/gui/: sfml.cpp
